# cvm_inf_diario

./: .gitignore  00_captura_arquivos.py  01-BaseGeografica.sql  01_gera_base_completa.py  02-BaseGeografica.sql  README.md  analise_dados.ipynb  captura_cvm_dados_diarios_fis.ipynb  pyproject.toml  rotina_diaria.ipynb  tratando_dados_2005_2020.ipynb
